--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "moment": "^2.29.3",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
